New images, new page format

--- a/about-me.html
+++ b/about-me.html
@@ -36,15 +36,7 @@
                         <p>I want to make friendlier digital spaces, smarter digital tools, and more fulfilling digital experiences.</p>
                         <p>I am obsessed with interactive media and have a deep love for stories, game design, and illustration.</p>
                         <p>My influences include LEGO, Ralph McQuarrie, Brett Victor, Don Norman, Studio Ghibli, Hidetaka Miyazaki, and the guy who made <a href="./img/trash-dove.gif">this GIF.</a></p>
-                        <p>I care about: </p>
-                        <ul class="bulletless">
-                            <li>Writing maintainable, readable code.</li>
-                            <li>The meaning of digital things in our lives.</li>
-                            <li>Media literacy.</li>
-                            <li>Intuitive design.</li>
-                            <li>Storytelling.</li>
-                            <li>Machine learning.</li>
-                        </ul>
+                        <p>I care about intuitive design, storytelling, machine learning, media literacy, the meaning of digital things in our lives, and writing maintanable, readable code</p>
                     </section>
                     <section class="text-section">
                             <p>Let's make something magical:</p>
@@ -52,9 +44,10 @@
                                 <a href="mailto:marcelmarki1@gmail.com?Subject=Hello%20Marcel" target="_top">marcelmarki1@gmail.com</a>
                             </p>
                             <p> Social:
-                                <a href="">Facebook</a> | 
-                                <a href="">LinkedIn</a> | 
-                                <a href="">Behance</a>
+                                <a href="https://www.facebook.com/marcel.marki">Facebook</a> | 
+                                <a href="https://www.linkedin.com/in/marcelmarki/">LinkedIn</a> | 
+                                <a href="https://www.behance.net/marcelmarki">Behance</a> |
+                                <a href="https://github.com/MMarki/">Github</a>
                             </p>
                     </section>
                 </div> 
