--- a/moodboard.html
+++ b/moodboard.html
@@ -37,6 +37,8 @@
                         |
                         <a class="Github" href="#mockups">High-Fidelity Mockups</a>
                     </p>
+                    <img class="img-work-page img-responsive" src="./img/img-placeholder.PNG" alt="Cover">
+                    <p class="tools">Tools Used: Illustrator, Photoshop, Pen &amp Paper, Wireframe.cc</p>
                 
                     <h2>The Problem:</h2>
                     <p>Moodboards traditionally have a very flat hierarchy where all the pictures are given equal visual importance. I wanted to create a moodboard tool where the importance of a picture to the overall feel of the moodboard determined it's size.</p>
@@ -69,7 +71,7 @@
                     <h2><a id="branding"></a>Branding &amp; Visual Design:</h2>
                     <p>Worked to make the UI unintrusive. Chose a pleasant, undistracting color palette that was predominantly greys and blues. </p>
                     <figure>
-                        <img class="img-work-page img-responsive" src="./img/img-placeholder.PNG" alt="Style Guide">
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/styleguide-moodboard.PNG" alt="Style Guide">.
                         <figcaption>Moodboard Styleguide</figcaption>
                     </figure>
                     <p>
@@ -88,7 +90,6 @@
                     
                     <h2><a id="mockups"></a>High-Fidelity Mockups:</h2>
                     <p>Built the mockups with a focus on the whole process. Empty states, changing sizes, all the modal windows a user might want.</p>
-                    <p class="tools">Tools Used: Illustrator, Photoshop, Pen &amp Paper, Wireframe.cc</p>
                 </section>
             </div>
         </div>
