--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             <div class="col-lg-12">
                 <section class="text-section">
                     <h1 class="work-header">Building a Portfolio Website</h1>
-                    <p class="work-tasks"><a class="Github" href="#sketching">Sketching</a>
+                     <p class="work-tasks"><a class="Github" href="#sketching">Sketching</a>
                         |
                         <a class="Github" href="#code-prototyping">Code Prototyping</a>
                         |
@@ -37,6 +37,8 @@
                         |
                         <a class="Github" href="#implementation">Implementation</a>
                     </p>
+                     <img class="img-work-page img-responsive" src="./img/img-placeholder.PNG" alt="Cover">
+                    <p class="tools">Tools Used: Pen &amp Paper, HTML, CSS, Bootstrap</p>
                 
                     <h2>The Problem:</h2>
                     <p>Elissa is an aspiring art director who built her own website using Bootstrap when she was in college. She didn't feel like the website that she had created was a good reflection of who she was as an artist and as a person. She felt it looked too much like a typical out-of-the box Bootstrap website.</p>
@@ -73,7 +75,6 @@
                         <img class="img-work-page-half img-responsive" src="./img/Elissa/elissa-website-ipad.PNG" alt="Styleguide">
                         <figcaption>Tablet View</figcaption>
                     </figure>
-                    <p class="tools">Tools Used: Pen &amp Paper, HTML, CSS, Bootstrap</p>
                 </section>
             </div>
         </div>
