New Writing for work sections

--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
         </div>
 		<section class="text-section-thin">
             <div class="col-lg-12">
-                <p>I'm Marcel, a software developer and UX designer living in Brooklyn, NY.</p>
-                <p>I'm currently:</p>
-                <ol>
-                    <li>Solving problems for large public sector clients at <a class= "Green" href="http://www.tylertech.com">Tyler Technologies.</a></li>
-                    <li>Teaching students how to code at <a class= "Blue" href="http://www.thecodingspace.com/">The Coding Space.</a></li>
-                    <li>Teaching myself UX Design.</li>
-                </ol>
+                <p>I'm Marcel Marki, a software developer and UX designer living in Brooklyn, NY. I'm currently teaching kids how to code and designing better learning tools at <a href="http://www.thecodingspace.com/">The Coding Space.</a>
+                Previously, I was a full-stack developer solving problems for large public sector clients at <a class= "Green" href="http://www.tylertech.com">Tyler Technologies.</a>
+                I'm looking for new opportunities, either freelance or full-time.
             </div>
             <div class="text-center">
                 <p><a class="Red" href="work.html">Work</a></p>
