--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="work.html">Marcel Marki</a>
+                  <a class="navbar-brand" href="index.html">Marcel Marki</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="work.html"><span>Work</span></a></li>
@@ -66,7 +66,7 @@
                     </figure>
                     <p>Since this was a personal website, I worked closely with Elissa to establish how the website should look. She wanted the softness and approachability of lower-case letters and pastel purples and blues. When she designed a new logo, I integrated the colors of the logo into the grid of projects. I used one of the purple colors throughout the website for links.</p>
                     <h2><a id="implementation"></a>Implementation:</h2>
-                    <p>I continued refinind the design of the website with a focus on making it responsive and easy to use.</p>
+                    <p>I continued to refine the design of the website with a focus on making it responsive and easy to use.</p>
                     <figure>
                         <img class="img-work-page-half img-responsive" src="./img/Elissa/elissa-website-iphone.PNG" alt="Styleguide">
                         <figcaption>Mobile View</figcaption>
@@ -75,6 +75,7 @@
                         <img class="img-work-page-half img-responsive" src="./img/Elissa/elissa-website-ipad.PNG" alt="Styleguide">
                         <figcaption>Tablet View</figcaption>
                     </figure>
+                    <p>Check it out <a href="http://elissadebruyn.com/">here.</a></p>
                 </section>
             </div>
         </div>
