--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="work.html">Marcel Marki</a>
+                  <a class="navbar-brand" href="index.html">Marcel Marki</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="work.html"><span>Work</span></a></li>
