Ch-ch-ch-ch-changes

--- a/moodboard.html
+++ b/moodboard.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="index.html">Marcel Marki</a>
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="./img/personal-logo.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="work.html"><span>Work</span></a></li>
@@ -46,11 +46,18 @@
                     </p>
                     <h2><a id="sketching"></a>Sketching:</h2>
                     <p>I generated a large volume of sketches to figure out how the moodboard would be laid out and how it would function.</p>
-                    <figure>
-                        <img class="img-work-page img-responsive" src="./img/img-placeholder.PNG" alt="Sketches">
+                    <!--figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/mudi-sketch.png" alt="Sketches">
                         <figcaption>Sketches.</figcaption>
                     </figure>
-                    
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/mudi-sketch2.png" alt="Sketches">
+                        <figcaption>Sketches.</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/mudi-sketch3.png" alt="Sketches">
+                        <figcaption>Sketches.</figcaption>
+                    </figure-->
                     <h2><a id="wireframing"></a>Wireframing:</h2>
                     <p>The wireframing stage was very brief. For wireframing to be useful, it needs to provide the designer with new information that sketching does not. The tool I used was very minimalistic, which was good for rapidly creating wireframes, but it hindered my ability to do in-depth and learn much about the design that I couldn't through sketching. If I were to do this project again, I would use a more robust wireframing tool so I could have gotten more insights during this phase.</p>
                     <figure>
