--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="index.html">Marcel Marki</a>
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="./img/personal-logo.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="work.html"><span>Work</span></a></li>
@@ -57,8 +57,7 @@
                     <p>I regularly got feedback from Elissa so that we could iterate on these early sketches and come up with something that made sense.</p>
                     
                     <h2><a id="code-prototyping"></a>Code Prototyping:</h2>
-                    <p>At this point, I jumped right into prototyping the project with code. Elissa wanted to get regular feedback so that she could help mould the site as it took its initial shape. I made the decision to skip over high-fidelity mockups because I knew I would be regularly meeting with Elissa and could save a ton of time this way. I built custom classes to handle navigation and layout, and I re-wrote most of the HTML to accomodate the new architecture of the website.</p>
-                
+                    <p>At this point, I jumped right into prototyping the project with HTML and CSS. Elissa wanted to get regular feedback so that she could help mould the site as it took its initial shape. I made the decision to skip over mockups because Elissa and I had worked together before, and I knew we could save time by working from a code prototype. I built custom classes to handle navigation and layout, and I re-wrote most of the HTML to accomodate the new architecture of the website.</p>
                     <h2><a id="branding"></a>Branding &amp; Visual Design:</h2>
                      <figure>
                         <img class="img-work-page img-responsive" src="./img/Elissa/elissa-styleguide.png" alt="Styleguide">
@@ -68,11 +67,11 @@
                     <h2><a id="implementation"></a>Implementation:</h2>
                     <p>I continued to refine the design of the website with a focus on making it responsive and easy to use.</p>
                     <figure>
-                        <img class="img-work-page-half img-responsive" src="./img/Elissa/elissa-website-iphone.PNG" alt="Styleguide">
+                        <img class="img-work-page img-responsive" src="./img/Elissa/elissa-website-iphone-done.PNG" alt="Styleguide">
                         <figcaption>Mobile View</figcaption>
                     </figure>
                     <figure>
-                        <img class="img-work-page-half img-responsive" src="./img/Elissa/elissa-website-ipad.PNG" alt="Styleguide">
+                        <img class="img-work-page img-responsive" src="./img/Elissa/elissa-website-ipad-done.PNG" alt="Styleguide">
                         <figcaption>Tablet View</figcaption>
                     </figure>
                     <p>Check it out <a href="http://elissadebruyn.com/">here.</a></p>
