--- a/twitter-bot.html
+++ b/twitter-bot.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="index.html">Marcel Marki</a>
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="./img/personal-logo.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="work.html"><span>Work</span></a></li>
@@ -35,7 +35,7 @@
                         |
                         <a class="Github" href="#implementation">Implementation</a>
                     </p>
-                    <img class="img-work-page img-responsive" src="./img/img-placeholder.PNG" alt="Cover">
+                    <img class="img-work-page img-responsive" src="./img/color-bot-cover.PNG" alt="Cover">
                     <p class="tools">Tools Used: Python, Twitter API</p>
                     <h2>The Goal:</h2>
                     <p>I wanted to make a minimalist tool for generating color palettes. I wanted to ensure that it not fall into the trappings of other Twitter bots. I didn't want to just be vomiting data out into the ether. I wanted users to interact with it.</p>
