--- a/about-me.html
+++ b/about-me.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="index.html">Marcel Marki</a>
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="./img/personal-logo.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="work.html">Work</a></li>
@@ -24,19 +24,25 @@
                 </ul>
             </nav>
         </div>
-        
         <div class="container-responsive">
+            <div class="row-fluid">
+                <div class="col-md-12">
+                    <h1 class=headline>Marcel Marki is <span id=switch>feverishly coding</span>.</h1>
+                </div>
+            </div>
             <div class="row-fluid">
                 <div class="col-md-5">
                    <img class="img-responsive" src="./img/img-profile.jpg">
                 </div>
                 <div class="col-md-7">
                     <section class="text-section">
-                        <h2>A few things about me:</h2>
+                        <p>A few things about me:</p>
                         <p>I want to make friendlier digital spaces, smarter digital tools, and more fulfilling digital experiences.</p>
                         <p>I am obsessed with interactive media and have a deep love for stories, game design, and illustration.</p>
-                        <p>My influences include LEGO, Ralph McQuarrie, Brett Victor, Don Norman, Studio Ghibli, Hidetaka Miyazaki, and the guy who made <a href="./img/trash-dove.gif">this GIF.</a></p>
+                        <p>My influences include LEGO, Ralph McQuarrie, Brett Victor, Don Norman, Ursula K. Le Guin, Studio Ghibli, Hidetaka Miyazaki, and the guy who made <a href="./img/trash-dove.gif">this GIF.</a></p>
                         <p>I care about intuitive design, storytelling, machine learning, media literacy, the meaning of digital things in our lives, and writing maintanable, readable code</p>
+                        <p> I'm currently teaching kids how to code and designing better learning tools at <a href="http://www.thecodingspace.com/">The Coding Space.</a>
+                I'm also open for freelance design opportunities.</p>
                     </section>
                     <section class="text-section">
                             <p>Let's make something magical:</p>
@@ -53,5 +59,25 @@
                 </div> 
             </div>
         </div>
+        <script>
+        function replace(id,content) {
+            var container = document.getElementById(id);
+            container.innerHTML = content;
+          }
+
+          var containerID = "switch";
+          var strings = [ "browsing spicey memes", "drawing strange creatures", "reading graphic design books", "not sleeping", "a recovering database engineer", "teaching kids to code", "building better learning tools", "playing Dark Souls", "nostalgic for digital spaces", "ordering in"];
+          var index = 0;
+          var timerID = setInterval("cycle()",1800);
+
+          function cycle() {
+            if(index < strings.length) {
+              replace(containerID,strings[index]);
+              index++;
+            } else {
+              index=0;
+            }
+          }
+        </script>
 	</body>
 </html>
