--- a/about-me.html
+++ b/about-me.html
@@ -26,16 +26,12 @@
         </div>
         <div class="container-responsive">
             <div class="row-fluid">
-                <div class="col-md-12">
-                    <h1 class=headline>Marcel Marki is <span id=switch>feverishly coding</span>.</h1>
-                </div>
-            </div>
-            <div class="row-fluid">
-                <div class="col-md-5">
+                <!--div class="col-md-5">
                    <img class="img-responsive" src="./img/img-profile.jpg">
-                </div>
-                <div class="col-md-7">
+                </div-->
+                <div class="col-md-12">
                     <section class="text-section">
+                        <h1 class=headline>Marcel Marki is <span id=switch>feverishly coding</span>.</h1>
                         <p>A few things about me:</p>
                         <p>I want to make friendlier digital spaces, smarter digital tools, and more fulfilling digital experiences.</p>
                         <p>I am obsessed with interactive media and have a deep love for stories, game design, and illustration.</p>
@@ -66,7 +62,7 @@
           }
 
           var containerID = "switch";
-          var strings = [ "browsing spicey memes", "drawing strange creatures", "reading graphic design books", "not sleeping", "a recovering database engineer", "teaching kids to code", "building better learning tools", "playing Dark Souls", "nostalgic for digital spaces", "ordering in"];
+          var strings = [ "browsing spicy memes", "drawing strange creatures", "reading graphic design books", "not sleeping", "a recovering database engineer", "teaching kids to code", "building better learning tools", "playing Dark Souls", "nostalgic for digital spaces", "ordering in"];
           var index = 0;
           var timerID = setInterval("cycle()",1800);
 
