--- a/moodboard.html
+++ b/moodboard.html
@@ -38,7 +38,6 @@
                         <a class="Github" href="#mockups">High-Fidelity Mockups</a>
                     </p>
                     <img class="img-work-page img-responsive" src="./img/img-placeholder.PNG" alt="Cover">
-                    <p class="tools">Tools Used: Illustrator, Photoshop, Pen &amp Paper, Wireframe.cc</p>
                 
                     <h2>The Problem:</h2>
                     <p>Moodboards traditionally have a very flat hierarchy where all the pictures are given equal visual importance. I wanted to create a moodboard tool where the importance of a picture to the overall feel of the moodboard determined it's size.</p>
@@ -46,18 +45,18 @@
                     </p>
                     <h2><a id="sketching"></a>Sketching:</h2>
                     <p>I generated a large volume of sketches to figure out how the moodboard would be laid out and how it would function.</p>
-                    <!--figure>
+                    <figure>
                         <img class="img-work-page img-responsive" src="./img/Moodboard-Final/mudi-sketch.png" alt="Sketches">
-                        <figcaption>Sketches.</figcaption>
+                        <figcaption>Moodboard Sharing and Naming.</figcaption>
                     </figure>
                     <figure>
                         <img class="img-work-page img-responsive" src="./img/Moodboard-Final/mudi-sketch2.png" alt="Sketches">
-                        <figcaption>Sketches.</figcaption>
+                        <figcaption>Moodboard Edit Widget.</figcaption>
                     </figure>
                     <figure>
                         <img class="img-work-page img-responsive" src="./img/Moodboard-Final/mudi-sketch3.png" alt="Sketches">
-                        <figcaption>Sketches.</figcaption>
-                    </figure-->
+                        <figcaption>Moodboard Sign-in.</figcaption>
+                    </figure>
                     <h2><a id="wireframing"></a>Wireframing:</h2>
                     <p>The wireframing stage was very brief. For wireframing to be useful, it needs to provide the designer with new information that sketching does not. The tool I used was very minimalistic, which was good for rapidly creating wireframes, but it hindered my ability to do in-depth and learn much about the design that I couldn't through sketching. If I were to do this project again, I would use a more robust wireframing tool so I could have gotten more insights during this phase.</p>
                     <figure>
@@ -99,7 +98,44 @@
                         No element of design exists in a vacuum. You can try to apply the Waterfall method when you design, but it's just going to reduce the quality of the final product.</p>
                     
                     <h2><a id="mockups"></a>High-Fidelity Mockups:</h2>
-                    <p>Built the mockups with a focus on the whole process. Empty states, changing sizes, all the modal windows a user might want.</p>
+                    <p>I built the mockups with a focus on the whole process. I wanted to make sure I addressed empty states and paid attention to the design of the modal windows even if they seemed secondary to the primary moodboard page.
+                    </p>
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/moodboard-screen5.PNG" alt="UnEven Logo">
+                        <figcaption>Moodboard Main Screen</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/moodboard-screen4.PNG" alt="UnEven Logo">
+                        <figcaption>Moodboard with the edit widget.</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/moodboard-screen.PNG" alt="UnEven Logo">
+                        <figcaption>Moodboard with resized image.</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/moodboard-screen3.PNG" alt="UnEven Logo">
+                        <figcaption>All Moodboards selected.</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/moodboard-screen2.png" alt="UnEven Logo">
+                        <figcaption>Moodboard Empty State</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/moodboard-add.PNG" alt="UnEven Logo">
+                        <figcaption>Add Image Modal</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page img-responsive" src="./img/Moodboard-Final/moodboard-details-comments.png" alt="UnEven Logo">
+                        <figcaption>View Image and Notes Modals</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page-half img-responsive" src="./img/Moodboard-Final/moodboard-edit-boards.png" alt="UnEven Logo">
+                        <figcaption>Edit/Rename Moodboards Modal</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page-half img-responsive" src="./img/Moodboard-Final/moodboard-team.png" alt="UnEven Logo">
+                        <figcaption>Share Moodboard Modal</figcaption>
+                    </figure>
                 </section>
             </div>
         </div>
