--- a/work.html
+++ b/work.html
@@ -30,9 +30,9 @@
             <div class="container-responsive">
                 <div class="row-responsive">
                     <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" style="background-image:url('./img/Elissa/elissa-cover.PNG');" href="portfolio.html">
+                        <a class= "image-link" style="background-image:url('./img/Elissa/elissa-cover.PNG');" href="elissa-portfolio.html">
                             <div class="thumb-overlay">
-                                <p class="text">01<br/>Building an Art Director's Portfolio<br/>Design, Code</p>
+                                <p class="text">01<br/>Building an Art Director's Portfolio<br/>HTML, CSS, Bootstrap, Pen &amp; Paper</p>
                             </div>
                         </a>
                     </div>
@@ -41,7 +41,7 @@
                         <a class= "image-link" style="background-image:url('./img/Moodboard-final/moodboard-cover.PNG');" href="moodboard.html">
                             <!--img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image"-->
                             <div class="thumb-overlay">
-                                <p class="text">02<br/>Building a Digital Moodboard<br/>Design</p>
+                                <p class="text">02<br/>Building a Digital Moodboard<br/>Illustrator, Photoshop, Pen &amp; Paper, Wireframe.cc</p>
                             </div>
                         </a>
                     </div>
@@ -50,7 +50,16 @@
                         <a class= "image-link" style="background-image:url('./img/color-bot-cover.PNG');" href="twitter-bot.html">
                             <!--img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image"-->
                             <div class="thumb-overlay">
-                                <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Design, Code</p>
+                                <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Python, Twitter API</p>
+                            </div>
+                        </a>
+                    </div>
+                    
+                    <div class="col-md-6 col-sm-12 portfolio-item">
+                        <a class= "image-link" style="background-image:url('./img/shots-redesign/shots-cover.PNG);" href="shots-in-the-dark.html">
+                            <!--img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image"-->
+                            <div class="thumb-overlay">
+                                <p class="text">01<br/>Redesigning a Videogame UI<br/>Game Maker Studio, GML</p>
                             </div>
                         </a>
                     </div>
