--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
-        <!--div>
-            <img class="img-profile" src="./img/img-profile.jpg">
-        </div-->
+        <!--Navbar-->
+        <div class="container-fluid content">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="./img/personal-logo.png"></a>
+                </div>
+            </nav>
+        </div>
+        
         <div class=loadingContainer>
             <div class= "loading">
                 <img class='loadingFront' src="img/personal-logo-para.png">
@@ -20,13 +26,13 @@
             </div>
         </div>
         
-		<section class="content text-section-thin">
+		<section class="content front-styles text-section-thin">
             <div class="col-lg-12">
                 <p>Hi!</p>
-                <p>I'm Marcel Marki, a software developer and UX designer living in Brooklyn, NY.
-            </div>
-            <div class="text-center">
-                <p><a class="Red" href="work.html">Work</a></p>
+                <p>I'm Marcel Marki, a software developer and self-taught UX designer living in Brooklyn, NY.
+                <div class="work-invite">
+                    <p><a class="Red bttn bttn-red" href="work.html"><span>SEE MY WORK</span></a></p>
+                </div>
             </div>
         </section>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
@@ -36,7 +42,7 @@
             function move() {
             var elem = document.getElementById("myBar"); 
             var width = 1;
-            var id = setInterval(frame, 15);
+            var id = setInterval(frame, 18);
             function frame() {
                     if (width >= 100) {
                         clearInterval(id);
