--- a/Portfolio Website/about-me.html
+++ b/Portfolio Website/about-me.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>HERES SOME THINGS TO KNO BOUT ME</title>
+		<title>Me</title>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="work.html">Marcel Marki</a>
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="./img/personal-logo.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="work.html">Work</a></li>
@@ -24,41 +24,59 @@
                 </ul>
             </nav>
         </div>
-        
         <div class="container-responsive">
             <div class="row-fluid">
-                <div class="col-md-5">
-                   <img class="img-responsive" src="/img/img-profile.jpg">
-                </div>
-                <div class="col-md-7">
+                <!--div class="col-md-5">
+                   <img class="img-responsive" src="./img/img-profile.jpg">
+                </div-->
+                <div class="col-md-12">
                     <section class="text-section">
-                        <h2>A few things about me:</h2>
+                        <h1 class=headline>Marcel Marki is <span id=switch>feverishly coding</span>.</h1>
+                        <h2 class=headline-short>A few things about me:</h2>
                         <p>I want to make friendlier digital spaces, smarter digital tools, and more fulfilling digital experiences.</p>
                         <p>I am obsessed with interactive media and have a deep love for stories, game design, and illustration.</p>
-                        <p>My influences include LEGO, the original Star Wars Trilogy, Studio Ghibli, Brett Victor, Don Norman, Hidetaka Miyazaki, and the guy who made <a href="./img/trash-dove.gif">this GIF.</a></p>
-                        <p>I care about: </p>
-                        <ul class="bulletless">
-                            <li>Writing maintainable, readable code.</li>
-                            <li>The meaning of digital things in our lives.</li>
-                            <li>Media literacy.</li>
-                            <li>Intuitive design.</li>
-                            <li>Storytelling.</li>
-                            <li>Machine learning.</li>
-                        </ul>
+                        <p>My influences include LEGO, Ralph McQuarrie, Brett Victor, Don Norman, Ursula K. Le Guin, Studio Ghibli, Hidetaka Miyazaki, and the guy who made <a href="./img/trash-dove.gif">this GIF.</a></p>
+                        <p>I care about intuitive design, storytelling, machine learning, media literacy, the meaning of digital things in our lives, and writing maintanable, readable code.</p>
+                        <p> I'm currently teaching kids how to code and designing better learning tools at <a href="http://www.thecodingspace.com/">The Coding Space.</a>
+                I'm also open for new design opportunities.</p>
                     </section>
                     <section class="text-section">
-                            <p>Let's make something magical:</p>
+                            <h2>Let's make something magical:</h2>
                             <p> Email:
-                                <a href="mailto:marcelmarki1@gmail.com?Subject=Hello%20Marcel" target="_top">marcelmarki1@gmail.com</a>
+                                <a href="mailto:marcelmarki1@gmail.com" target="_top">marcelmarki1@gmail.com</a>
                             </p>
                             <p> Social:
-                                <a href="">Facebook</a> | 
-                                <a href="">LinkedIn</a> | 
-                                <a href="">Behance</a>
+                                <a href="https://www.behance.net/marcelmarki">Behance</a>
+                                |
+                                <a href="https://github.com/MMarki/">Github</a>
+                                |
+                                <a href="https://www.linkedin.com/in/marcelmarki/">LinkedIn</a>
+                                |
+                                 <a href="https://www.facebook.com/marcel.marki">Facebook</a>
                             </p>
                     </section>
                 </div> 
             </div>
         </div>
+        <script>
+        function replace(id,content) {
+            var container = document.getElementById(id);
+            container.innerHTML = content;
+          }
+
+          var containerID = "switch";
+          var strings = [ "browsing spicy memes", "drawing strange creatures", "reading graphic design books", "not sleeping", "a recovering database engineer", "teaching kids to code", "building better learning tools", "playing Dark Souls", "nostalgic for digital spaces","messing around in Illustrator","ordering in","exploring The Strand"];
+          var index = 0;
+          var timerID = setInterval("cycle()",1800);
+
+          function cycle() {
+            if(index < strings.length) {
+              replace(containerID,strings[index]);
+              index++;
+            } else {
+              index=0;
+            }
+          }
+        </script>
 	</body>
 </html>
