--- a/Portfolio Website/resume.html
+++ b/Portfolio Website/resume.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>ThE HISTORY OF MY ANTICS AND FAILURES</title>
+		<title>Resume</title>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="work.html">Marcel Marki</a>
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="./img/personal-logo.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="work.html">Work</a></li>
@@ -27,9 +27,9 @@
         
          <div class="container-responsive">
             <div class="row-fluid">
-                <div class="col-lg-12 col-sm-12">
+                <div class="col-lg-12">
                     <a class="resume-link" href="./img/marcel-marki-resume.pdf">
-                       <img class="img-responsive img-resume" src="/img/marcel-marki-resume.png">
+                       <img class="img-responsive img-resume" src="./img/marcel-marki-resume.png">
                     </a>
                 </div>
             </div>
