--- a/Portfolio Website/work.html
+++ b/Portfolio Website/work.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>BIG PROJECTS THAT I HAVE DUN DID</title>
+		<title>Work</title>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="work.html">Marcel Marki</a>
+                    <a class="navbar-brand" href="index.html"><img class="navbar-img" src="./img/personal-logo.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="work.html"><span>Work</span></a></li>
@@ -30,27 +30,36 @@
             <div class="container-responsive">
                 <div class="row-responsive">
                     <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" style="background-image:url('http://127.0.0.1:54049/img/Elissa/elissa-new-website.PNG');" href="portfolio.html">
+                        <a class= "image-link" style="background-image:url('./img/shots-redesign/shots-cover.png');" href="shots-in-the-dark.html">
+                            <!--img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image"-->
                             <div class="thumb-overlay">
-                                <p class="text">01<br/>Building an Art Director's Portfolio<br/>Design, Code</p>
+                                <p class="text">01<br/>Redesigning a Videogame UI<br/>Game Maker Studio, GML</p>
+                            </div>
+                        </a>
+                    </div>
+                    
+                    <div class="col-md-6 col-sm-12 portfolio-item">
+                        <a class= "image-link" style="background-image:url('./img/Elissa/elissa-cover.png');" href="elissa-portfolio.html">
+                            <div class="thumb-overlay">
+                                <p class="text">02<br/>Building an Art Director's Portfolio<br/>HTML, CSS, Bootstrap, Pen &amp; Paper</p>
                             </div>
                         </a>
                     </div>
 
                     <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" style="background-image:url('http://127.0.0.1:54049/img/img-placeholder.PNG');" href="moodboard.html">
-                            <!--img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image"-->
+                        <a class= "image-link" style="background-image:url('./img/color-bot-cover.png');" href="twitter-bot.html">
+                            <!--img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image"-->
                             <div class="thumb-overlay">
-                                <p class="text">02<br/>Building a Digital Moodboard<br/>Design</p>
+                                <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Python, Twitter API</p>
                             </div>
                         </a>
                     </div>
-
-                    <div class="col-md- col-sm-12 portfolio-item">
-                        <a class= "image-link" style="background-image:url('http://127.0.0.1:54049/img/Elissa/color-bot.PNG');" href="twitter-bot.html">
-                            <!--img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image"-->
+                    
+                     <div class="col-md-6 col-sm-12 portfolio-item">
+                        <a class= "image-link" style="background-image:url('./img/Moodboard-Final/moodboard-cover.png');" href="moodboard.html">
+                            <!--img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image"-->
                             <div class="thumb-overlay">
-                                <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Design, Code</p>
+                                <p class="text">04<br/>Building a Digital Moodboard<br/>Illustrator, Photoshop, Pen &amp; Paper, Wireframe.cc</p>
                             </div>
                         </a>
                     </div>
